--- a/MaterialWinforms/MaterialWinforms.csproj
+++ b/MaterialWinforms/MaterialWinforms.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
@@ -106,10 +107,13 @@
     <Compile Include="Controls\MaterialSingleLineTextField.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\MaterialTabControl.cs">
+    <Compile Include="Controls\TabControls\MaterialTabControl.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\MaterialTabSelector.cs">
+    <Compile Include="Controls\TabControls\MaterialTabPage.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controls\TabControls\MaterialTabSelector.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Controls\MaterialProgressBar.cs">
@@ -125,6 +129,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="DrawHelper.cs" />
+    <Compile Include="IShadowedMaterialControl.cs" />
     <Compile Include="IMaterialControl.cs" />
     <Compile Include="Controls\MaterialRaisedButton.cs">
       <SubType>Component</SubType>
