--- a/MaterialWinforms/MaterialWinforms.csproj
+++ b/MaterialWinforms/MaterialWinforms.csproj
@@ -162,6 +162,9 @@
     <Compile Include="Controls\MaterialSingleLineTextField.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Controls\MaterialTreeControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controls\MaterialUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
